# crosslist

./: .gitignore  .mcp.json  .roomodes  GEMINI.md  README.md  agent_understanding  commit_message.txt  completion_summary  eslint.config.js  improvement_goals  improvement_implementation  landing-page-v1.html  package-lock.json  package.json  project-checklist.md  start-up-commands.md  temp-compile-debug-agents.yaml  termination_report  turbo.json  validation_results
.serena/: project.yml
apps/api/: pyproject.toml
apps/api/src/api/models/: analytics.py
apps/api/src/models/: __init__.py  analytics.py  base.py  marketplaces.py  users.py
apps/api/src/models/tests/: test_analytics.py  test_listings.py  test_marketplaces.py  test_products.py  test_users.py
archive/apps/api/: pyproject.toml
archive/apps/api/src/models/: listings.py  products.py
bmad/: config.yaml
docs/: TODO.md  accessibility-fix-summary.md  architecture-decisions.yaml  architecture-validation-report.md  architecture.md  auth-page-fix-summary.md  backlog.md  bmad-session-state-2025-11-14.md  bmm-workflow-status.yaml  crosslist-prototype.html  edit-workflow_improvement_goals.md  epic-2-breakdown-summary.md  epic-2-details.md  epics-enhanced-epic-2-summary.md  epics.md  fr_inventory.md  implementation-readiness-report-2025-11-30.md  improvement_goals.md  initial_investigation_report.md  modified_backend_structure.md  modified_ci_yml.md  modified_ci_yml_v2.md  modified_reactive_debug_instructions.md  modified_turbo_json.md  module-brief-debug-2025-11-14.md  module_understanding.md  prd.md  (+19 more)
(+435 files in other folders)
