[project]
name = "api"
version = "0.1.0"
description = "The FastAPI backend"
authors = [
    {name = "Gemini",email = "gemini@google.com"}
]
license = {text = "MIT"}

requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "langchain",
    "pydantic-settings",
    "pydantic[email]",
    "email-validator"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "mypy (>=1.11.0,<2.0.0)"
]

[tool.poetry]
package-mode = false
