[project]
name = "api"
version = "0.1.0"
description = "The FastAPI backend"
authors = [
    {name = "Gemini",email = "gemini@google.com"}
]
license = {text = "MIT"}

requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "langchain",
    "pydantic-settings",
    "pydantic[email]",
    "email-validator"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.2"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"


[tool.poetry]
packages = [
    { include = "api", from = "src" }
]

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
